🌟 feat: added OG and <meta> description

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,38 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Website</title>
+		<title>bscm</title>
+
+		<meta
+			name="description"
+			content="Explore and manage bscm content — charts, updates, and tools built by and for the community."
+		/>
+
+		<!-- Open Graph -->
+		<meta property="og:title" content="bscm" />
+		<meta
+			property="og:description"
+			content="Explore and manage bscm content — charts, updates, and tools built by and for the community."
+		/>
+		<meta
+			property="og:image"
+			content="https://bscm.netlify.app/cover.png"
+		/>
+		<meta property="og:url" content="https://bscm.netlify.app" />
+		<meta property="og:type" content="website" />
+
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:title" content="bscm" />
+		<meta
+			name="twitter:description"
+			content="Explore and manage bscm content — charts, updates, and tools built by and for the community."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://bscm.netlify.app/cover.png"
+		/>
+
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
